openshift/llama-server/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: llama
  namespace: litemaas
  annotations:
    haproxy.router.openshift.io/timeout: '5m'
    app.openshift.io/vcs-uri: 'https://github.com/mmartofel/'
  labels:
    app: llama-server
    app.kubernetes.io/component: llama-server
    app.kubernetes.io/instance: llama-server
spec:
  to:
    kind: Service
    name: llama
    weight: 100
  port:
    targetPort: 8000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
